Fix responsive bugs for films section.
There was an issue with the responsiveness of the popup. It meant that on smaller displays the div overflowed and couldn't be scrolled - but this is now fixed!

--- a/films/films.css
+++ b/films/films.css
@@ -179,7 +179,24 @@ body div.dtr-modal div.dtr-modal-display div.dtr-modal-content div.modal-text-wr
         font-size: 35px;
     }
     body div.dtr-modal div.dtr-modal-display {
-        width: 98%;
-        height: 93%;
+        width: 300px;
+        height: 98%;
+        overflow: auto;
+    }   
+    body div.dtr-modal div.dtr-modal-display div.dtr-modal-content div.modal-text-wrapper {
+        height: inherit;
+        width: 300px;
+    }
+}
+
+@media(max-height:510px) {
+    body div.dtr-modal div.dtr-modal-display {
+        width: 300px;
+        height: 98%;
+        overflow: auto;
+    }   
+    body div.dtr-modal div.dtr-modal-display div.dtr-modal-content div.modal-text-wrapper {
+        height: inherit;
+        width: 300px;
     }
 }
